app templates separated from python

--- a/templates/guess.html
+++ b/templates/guess.html
@@ -7,6 +7,7 @@
         <header></header>
         <section>
             <h1>Guess the anime!</h1>
+            <h3>My Guess is {{ guess }}</h3>
         </section>
         <footer></footer>
     </body>
