--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
         <header></header>
         <section>
             <h1>Guess the anime!</h1>
+            <h3>Think of your favorite anime and I'll guess it.</h3>
+            <h5>Ready to play? <a href="#">Click</a> to start</h5>
         </section>
         <footer></footer>
     </body>
