--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <section>
             <h1>Guess the anime!</h1>
             <h3>Think of your favorite anime and I'll guess it.</h3>
-            <h5>Ready to play? <a href="#">Click</a> to start</h5>
+            <h5>Ready to play? <a href="{{ url_for('question', id=1) }}">Click</a> to start</h5>
         </section>
         <footer></footer>
     </body>
